package org.puc.core.cia;


import org.puc.core.voo.Trecho;

import java.util.List;

public class CiaAerea {
    private int idCia;
    private List<Trecho> trechos;
    // HashMAp trechos

    public Trecho registrarTrecho(Trecho trecho) {
        return null;
    }

    public void removerTrecho(int idTrecho) {

    }
}
